// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Отрисовка компонента круг Круг рендерится  c index без ошибок 1`] = `
<div
  className="content "
  data-testid="circlesContainer"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circlesHead"
  />
  <div
    className="circle   default"
    data-testid="circleBorder"
  >
    <p
      className="text text_type_circle text_color_input letter"
    >
      Тест
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  >
    0
  </p>
  <div
    className="text text_type_input text_color_input mt-4 absolute tail60 element"
    data-testid="circlesTail"
  />
</div>
`;

exports[`Отрисовка компонента круг Круг рендерится  c параметром isSmall без ошибок 1`] = `
<div
  className="content "
  data-testid="circlesContainerHeadTail"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circlesHead"
  />
  <div
    className="circle  small default"
    data-testid="circleBorder"
  >
    <p
      className="text text_type_circle text_color_input letter"
    >
      Тест
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circlesTail"
  />
</div>
`;

exports[`Отрисовка компонента круг Круг рендерится c head без ошибок 1`] = `
<div
  className="content "
  data-testid="circlesContainer"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head string"
    data-testid="circlesHead"
  >
    Тест
  </div>
  <div
    className="circle   default"
    data-testid="circleBorder"
  >
    <p
      className="text text_type_circle text_color_input letter"
    >
      Тест
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circlesTail"
  />
</div>
`;

exports[`Отрисовка компонента круг Круг рендерится c react head без ошибок 1`] = `
<div
  className="content "
  data-testid="circlesContainer"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circlesHead"
  >
    <div
      className="content "
      data-testid="circlesContainerHeadTail"
    >
      <div
        className="text text_type_input text_color_input mb-4 absolute head element"
        data-testid="circlesHead"
      />
      <div
        className="circle  small default"
        data-testid="circleBorder"
      >
        <p
          className="text text_type_circle text_color_input letter"
        >
          Тест
        </p>
      </div>
      <p
        className="text text_type_input text_color_input mt-4 absolute index"
      />
      <div
        className="text text_type_input text_color_input mt-4 absolute tail30 element"
        data-testid="circlesTail"
      />
    </div>
  </div>
  <div
    className="circle   default"
    data-testid="circleBorder"
  >
    <p
      className="text text_type_circle text_color_input letter"
    >
      Тест
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circlesTail"
  />
</div>
`;

exports[`Отрисовка компонента круг Круг рендерится c react tail без ошибок 1`] = `
<div
  className="content "
  data-testid="circlesContainer"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circlesHead"
  />
  <div
    className="circle   default"
    data-testid="circleBorder"
  >
    <p
      className="text text_type_circle text_color_input letter"
    >
      Тест
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circlesTail"
  >
    <div
      className="content "
      data-testid="circlesContainerHeadTail"
    >
      <div
        className="text text_type_input text_color_input mb-4 absolute head element"
        data-testid="circlesHead"
      />
      <div
        className="circle  small default"
        data-testid="circleBorder"
      >
        <p
          className="text text_type_circle text_color_input letter"
        >
          Тест
        </p>
      </div>
      <p
        className="text text_type_input text_color_input mt-4 absolute index"
      />
      <div
        className="text text_type_input text_color_input mt-4 absolute tail30 element"
        data-testid="circlesTail"
      />
    </div>
  </div>
</div>
`;

exports[`Отрисовка компонента круг Круг рендерится c tail без ошибок 1`] = `
<div
  className="content "
  data-testid="circlesContainer"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circlesHead"
  />
  <div
    className="circle   default"
    data-testid="circleBorder"
  >
    <p
      className="text text_type_circle text_color_input letter"
    >
      Тест
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 string"
    data-testid="circlesTail"
  >
    Тест
  </div>
</div>
`;

exports[`Отрисовка компонента круг Круг рендерится c буквами без ошибок 1`] = `
<div
  className="content "
  data-testid="circlesContainer"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circlesHead"
  />
  <div
    className="circle   default"
    data-testid="circleBorder"
  >
    <p
      className="text text_type_circle text_color_input letter"
    >
      Тест
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circlesTail"
  />
</div>
`;

exports[`Отрисовка компонента круг Круг рендерится без буквы без ошибок 1`] = `
<div
  className="content "
  data-testid="circlesContainer"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circlesHead"
  />
  <div
    className="circle   default"
    data-testid="circleBorder"
  >
    <p
      className="text text_type_circle text_color_input letter"
    >
      
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circlesTail"
  />
</div>
`;

exports[`Отрисовка компонента круг Круг рендерится в состоянии changing без ошибок 1`] = `
<div
  className="content "
  data-testid="circlesContainer"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circlesHead"
  />
  <div
    className="circle   changing"
    data-testid="circleBorder"
  >
    <p
      className="text text_type_circle text_color_input letter"
    >
      Тест
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circlesTail"
  />
</div>
`;

exports[`Отрисовка компонента круг Круг рендерится в состоянии default без ошибок 1`] = `
<div
  className="content "
  data-testid="circlesContainer"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circlesHead"
  />
  <div
    className="circle   default"
    data-testid="circleBorder"
  >
    <p
      className="text text_type_circle text_color_input letter"
    >
      Тест
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circlesTail"
  />
</div>
`;

exports[`Отрисовка компонента круг Круг рендерится в состоянии modified без ошибок 1`] = `
<div
  className="content "
  data-testid="circlesContainer"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="circlesHead"
  />
  <div
    className="circle   modified"
    data-testid="circleBorder"
  >
    <p
      className="text text_type_circle text_color_input letter"
    >
      Тест
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="circlesTail"
  />
</div>
`;
